RESOLVED FIXED 246601
WebPush.ITPCleanup test always fails
https://bugs.webkit.org/show_bug.cgi?id=246601
Summary WebPush.ITPCleanup test always fails
Ben Nham
Reported 2022-10-16 16:46:11 PDT
The WebPush.ITPCleanup test (added in 243058) always fails. We should fix this and also clean the tests up a bit so it's easier to test other web push + ITP interactions, e.g. 246468.
Attachments
Radar WebKit Bug Importer
Comment 1 2022-10-16 16:46:43 PDT
Ben Nham
Comment 2 2022-10-16 16:54:18 PDT
EWS
Comment 3 2022-10-17 13:52:56 PDT
Committed 255648@main (bd280775effe): <https://commits.webkit.org/255648@main> Reviewed commits have been landed. Closing PR #5435 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.