WebPush.ITPCleanup test always fails https://bugs.webkit.org/show_bug.cgi?id=246601 rdar://problem/101228159

Reviewed by Alex Christensen.

The WebPush.ITPCleanup test always fails. This fixes that and also refactors the code so it is
easier to test further interactions between Web Push and ITP (e.g. 246468):

- We now enable an ITP database as part of WebPushDTest test setup.
- The ITP tests now use the same initialization as all the other Web Push tests (by building off of
  the WebPushDTest class).
- Added a test case (NotificationClickExtendsITPCleanupTimerBy30Days) that should pass once 246468
  is resolved; for now, the part that fails is commented out.

* Tools/TestWebKitAPI/TestNotificationProvider.cpp:
(TestWebKitAPI::TestNotificationProvider::simulateNotificationClick):
* Tools/TestWebKitAPI/TestNotificationProvider.h:
* Tools/TestWebKitAPI/Tests/WebKitCocoa/PushAPI.mm:
* Tools/TestWebKitAPI/Tests/WebKitCocoa/WebPushDaemon.mm:

Canonical link: https://commits.webkit.org/255648@main